Fix missing margin in filter bar

--- a/indico/modules/rb_new/client/styles/main.scss
+++ b/indico/modules/rb_new/client/styles/main.scss
@@ -91,7 +91,7 @@ a {
         flex-direction: row;
         flex-wrap: wrap;
 
-        > :global(.ui.buttons), > .view-icons {
+        > .ui.buttons, > .view-icons {
             margin-bottom: 10px;
         }
 
